# Cpp

./: README.md
Baba_is_you/: CMakeLists.txt
Baba_is_you/resources/: level_0.txt  level_1.txt  level_2.txt  level_3.txt  level_4.txt  problem.txt  readme.txt  sauvegarde.txt
Baba_is_you/src/: CMakeLists.txt
Baba_is_you/src/model/: board.cpp  board.h  coordinate.cpp  coordinate.h  direction.h  elements.h  fileloader.cpp  fileloader.h  game.cpp  game.h  gameobject.cpp  gameobject.h  type.h
Baba_is_you/src/ui/: controller.cpp  controller.h  controllergui.cpp  controllergui.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  view.cpp  view.h
Baba_is_you/src/utility/: Observable.h
Baba_is_you/tests/: CMakeLists.txt  board_test.cpp
ButtonUp/: ButtonUp.pro
ButtonUp/core/: Color.h  board.cpp  board.h  case.cpp  case.h  core.pro  game.cpp  game.h  gamestate.h  observable.cpp  observable.h  observer.h  player.cpp  player.h  token.cpp  token.h
ButtonUp/gui/: gui.pro  guiview.cpp  guiview.h  inscriptionwindow.cpp  inscriptionwindow.h  inscriptionwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ressource.qrc  ui_inscriptionwindow.h  ui_mainwindow.h
ButtonUp/testConsoleMode/: main.cpp  testConsoleMode.pro
ButtonUp/tests/: board.cpp  case.cpp  game.cpp  main.cpp  tests.pro  token.cpp
Stratego/: Makefile  Stratego.pro  Stratego.pro.user.0a9473d.4.8-pre1  defaults.pri  projet.dox
Stratego/console/: ConsoleView.cpp  ConsoleView.h  console.pro  consoleController.cpp  consoleController.h  main.cpp
Stratego/gui/: Makefile.Debug  Makefile.Release  gui.pro  guiController.cpp  guiController.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
Stratego/metier/: Board.cpp  Board.h  Box.cpp  Box.h  Cemetery.cpp  Cemetery.h  ColorPiece.h  Controller.h  Game.cpp  Game.h  Makefile  Makefile.Debug  Observer.h  (+17 more)
(+9 files in other folders)
